--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   upi_pay: 0.2.1
+  flutter_upi: 0.0.2
 
 dev_dependencies:
   flutter_test:
